// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header component when logged out 1`] = `
<Header>
  <Query
    query={
      Object {
        "definitions": Array [
          Object {
            "directives": Array [],
            "kind": "FragmentDefinition",
            "name": Object {
              "kind": "Name",
              "value": "Image",
            },
            "selectionSet": Object {
              "kind": "SelectionSet",
              "selections": Array [
                Object {
                  "alias": undefined,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "name": Object {
                    "kind": "Name",
                    "value": "id",
                  },
                  "selectionSet": undefined,
                },
                Object {
                  "alias": undefined,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "name": Object {
                    "kind": "Name",
                    "value": "url",
                  },
                  "selectionSet": undefined,
                },
              ],
            },
            "typeCondition": Object {
              "kind": "NamedType",
              "name": Object {
                "kind": "Name",
                "value": "Image",
              },
            },
          },
          Object {
            "directives": Array [],
            "kind": "OperationDefinition",
            "name": Object {
              "kind": "Name",
              "value": "Account",
            },
            "operation": "query",
            "selectionSet": Object {
              "kind": "SelectionSet",
              "selections": Array [
                Object {
                  "alias": undefined,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "name": Object {
                    "kind": "Name",
                    "value": "account",
                  },
                  "selectionSet": Object {
                    "kind": "SelectionSet",
                    "selections": Array [
                      Object {
                        "alias": undefined,
                        "arguments": Array [],
                        "directives": Array [],
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "email",
                        },
                        "selectionSet": undefined,
                      },
                      Object {
                        "alias": undefined,
                        "arguments": Array [],
                        "directives": Array [],
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "id",
                        },
                        "selectionSet": undefined,
                      },
                      Object {
                        "alias": undefined,
                        "arguments": Array [],
                        "directives": Array [],
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "name",
                        },
                        "selectionSet": undefined,
                      },
                      Object {
                        "alias": undefined,
                        "arguments": Array [],
                        "directives": Array [],
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "profile",
                        },
                        "selectionSet": Object {
                          "kind": "SelectionSet",
                          "selections": Array [
                            Object {
                              "alias": undefined,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "avatar",
                              },
                              "selectionSet": Object {
                                "kind": "SelectionSet",
                                "selections": Array [
                                  Object {
                                    "directives": Array [],
                                    "kind": "FragmentSpread",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "Image",
                                    },
                                  },
                                ],
                              },
                            },
                            Object {
                              "alias": undefined,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "followers",
                              },
                              "selectionSet": Object {
                                "kind": "SelectionSet",
                                "selections": Array [
                                  Object {
                                    "alias": undefined,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "avatar",
                                    },
                                    "selectionSet": Object {
                                      "kind": "SelectionSet",
                                      "selections": Array [
                                        Object {
                                          "directives": Array [],
                                          "kind": "FragmentSpread",
                                          "name": Object {
                                            "kind": "Name",
                                            "value": "Image",
                                          },
                                        },
                                      ],
                                    },
                                  },
                                  Object {
                                    "alias": undefined,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "id",
                                    },
                                    "selectionSet": undefined,
                                  },
                                  Object {
                                    "alias": undefined,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "name",
                                    },
                                    "selectionSet": undefined,
                                  },
                                ],
                              },
                            },
                            Object {
                              "alias": undefined,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "following",
                              },
                              "selectionSet": Object {
                                "kind": "SelectionSet",
                                "selections": Array [
                                  Object {
                                    "alias": undefined,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "avatar",
                                    },
                                    "selectionSet": Object {
                                      "kind": "SelectionSet",
                                      "selections": Array [
                                        Object {
                                          "directives": Array [],
                                          "kind": "FragmentSpread",
                                          "name": Object {
                                            "kind": "Name",
                                            "value": "Image",
                                          },
                                        },
                                      ],
                                    },
                                  },
                                  Object {
                                    "alias": undefined,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "id",
                                    },
                                    "selectionSet": undefined,
                                  },
                                  Object {
                                    "alias": undefined,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "name",
                                    },
                                    "selectionSet": undefined,
                                  },
                                ],
                              },
                            },
                            Object {
                              "alias": undefined,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "id",
                              },
                              "selectionSet": undefined,
                            },
                            Object {
                              "alias": undefined,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "name",
                              },
                              "selectionSet": undefined,
                            },
                          ],
                        },
                      },
                    ],
                  },
                },
              ],
            },
            "variableDefinitions": Array [],
          },
        ],
        "kind": "Document",
        "loc": Object {
          "end": 440,
          "start": 0,
        },
      }
    }
  >
    <Topbar
      className="Header"
    >
      <WithStyles(Content$4)
        className="Header"
      >
        <Content$4
          className="Header"
          classes={
            Object {
              "topbar": "Content-4-topbar-1",
            }
          }
        >
          <div
            className="Content-4-topbar-1 Header"
          >
            <WithStyles(AppBar)
              color="default"
              position="static"
            >
              <AppBar
                classes={
                  Object {
                    "colorDefault": "MuiAppBar-colorDefault-8",
                    "colorPrimary": "MuiAppBar-colorPrimary-9",
                    "colorSecondary": "MuiAppBar-colorSecondary-10",
                    "positionAbsolute": "MuiAppBar-positionAbsolute-4",
                    "positionFixed": "MuiAppBar-positionFixed-3",
                    "positionRelative": "MuiAppBar-positionRelative-7",
                    "positionStatic": "MuiAppBar-positionStatic-6",
                    "positionSticky": "MuiAppBar-positionSticky-5",
                    "root": "MuiAppBar-root-2",
                  }
                }
                color="default"
                position="static"
              >
                <WithStyles(Paper)
                  className="MuiAppBar-root-2 MuiAppBar-positionStatic-6 MuiAppBar-colorDefault-8"
                  component="header"
                  elevation={4}
                  square={true}
                >
                  <Paper
                    className="MuiAppBar-root-2 MuiAppBar-positionStatic-6 MuiAppBar-colorDefault-8"
                    classes={
                      Object {
                        "elevation0": "MuiPaper-elevation0-13",
                        "elevation1": "MuiPaper-elevation1-14",
                        "elevation10": "MuiPaper-elevation10-23",
                        "elevation11": "MuiPaper-elevation11-24",
                        "elevation12": "MuiPaper-elevation12-25",
                        "elevation13": "MuiPaper-elevation13-26",
                        "elevation14": "MuiPaper-elevation14-27",
                        "elevation15": "MuiPaper-elevation15-28",
                        "elevation16": "MuiPaper-elevation16-29",
                        "elevation17": "MuiPaper-elevation17-30",
                        "elevation18": "MuiPaper-elevation18-31",
                        "elevation19": "MuiPaper-elevation19-32",
                        "elevation2": "MuiPaper-elevation2-15",
                        "elevation20": "MuiPaper-elevation20-33",
                        "elevation21": "MuiPaper-elevation21-34",
                        "elevation22": "MuiPaper-elevation22-35",
                        "elevation23": "MuiPaper-elevation23-36",
                        "elevation24": "MuiPaper-elevation24-37",
                        "elevation3": "MuiPaper-elevation3-16",
                        "elevation4": "MuiPaper-elevation4-17",
                        "elevation5": "MuiPaper-elevation5-18",
                        "elevation6": "MuiPaper-elevation6-19",
                        "elevation7": "MuiPaper-elevation7-20",
                        "elevation8": "MuiPaper-elevation8-21",
                        "elevation9": "MuiPaper-elevation9-22",
                        "root": "MuiPaper-root-11",
                        "rounded": "MuiPaper-rounded-12",
                      }
                    }
                    component="header"
                    elevation={4}
                    square={true}
                  >
                    <header
                      className="MuiPaper-root-11 MuiPaper-elevation4-17 MuiAppBar-root-2 MuiAppBar-positionStatic-6 MuiAppBar-colorDefault-8"
                    >
                      <WithStyles(Toolbar)>
                        <Toolbar
                          classes={
                            Object {
                              "dense": "MuiToolbar-dense-41",
                              "gutters": "MuiToolbar-gutters-39",
                              "regular": "MuiToolbar-regular-40",
                              "root": "MuiToolbar-root-38",
                            }
                          }
                          disableGutters={false}
                          variant="regular"
                        >
                          <div
                            className="MuiToolbar-root-38 MuiToolbar-regular-40 MuiToolbar-gutters-39"
                          >
                            <Container>
                              <div
                                className="Container"
                              >
                                <Link
                                  className="logo"
                                  replace={false}
                                  to="/"
                                >
                                  <a
                                    className="logo"
                                    href="/"
                                    onClick={[Function]}
                                  >
                                    Social Network
                                  </a>
                                </Link>
                                <div
                                  className="items"
                                >
                                  <ButtonLink
                                    to="/login"
                                  >
                                    <Link
                                      className="ButtonLink"
                                      replace={false}
                                      to="/login"
                                    >
                                      <a
                                        className="ButtonLink"
                                        href="/login"
                                        onClick={[Function]}
                                      >
                                        <Button$2>
                                          <WithStyles(Button)>
                                            <Button
                                              classes={
                                                Object {
                                                  "colorInherit": "MuiButton-colorInherit-68",
                                                  "contained": "MuiButton-contained-58",
                                                  "containedPrimary": "MuiButton-containedPrimary-59",
                                                  "containedSecondary": "MuiButton-containedSecondary-60",
                                                  "disabled": "MuiButton-disabled-67",
                                                  "extendedFab": "MuiButton-extendedFab-65",
                                                  "fab": "MuiButton-fab-64",
                                                  "flat": "MuiButton-flat-52",
                                                  "flatPrimary": "MuiButton-flatPrimary-53",
                                                  "flatSecondary": "MuiButton-flatSecondary-54",
                                                  "focusVisible": "MuiButton-focusVisible-66",
                                                  "fullWidth": "MuiButton-fullWidth-72",
                                                  "label": "MuiButton-label-48",
                                                  "mini": "MuiButton-mini-69",
                                                  "outlined": "MuiButton-outlined-55",
                                                  "outlinedPrimary": "MuiButton-outlinedPrimary-56",
                                                  "outlinedSecondary": "MuiButton-outlinedSecondary-57",
                                                  "raised": "MuiButton-raised-61",
                                                  "raisedPrimary": "MuiButton-raisedPrimary-62",
                                                  "raisedSecondary": "MuiButton-raisedSecondary-63",
                                                  "root": "MuiButton-root-47",
                                                  "sizeLarge": "MuiButton-sizeLarge-71",
                                                  "sizeSmall": "MuiButton-sizeSmall-70",
                                                  "text": "MuiButton-text-49",
                                                  "textPrimary": "MuiButton-textPrimary-50",
                                                  "textSecondary": "MuiButton-textSecondary-51",
                                                }
                                              }
                                              color="default"
                                              component="button"
                                              disableFocusRipple={false}
                                              disabled={false}
                                              fullWidth={false}
                                              mini={false}
                                              size="medium"
                                              type="button"
                                              variant="text"
                                            >
                                              <WithStyles(ButtonBase)
                                                className="MuiButton-root-47 MuiButton-text-49 MuiButton-flat-52"
                                                component="button"
                                                disabled={false}
                                                focusRipple={true}
                                                focusVisibleClassName="MuiButton-focusVisible-66"
                                                type="button"
                                              >
                                                <ButtonBase
                                                  centerRipple={false}
                                                  className="MuiButton-root-47 MuiButton-text-49 MuiButton-flat-52"
                                                  classes={
                                                    Object {
                                                      "disabled": "MuiButtonBase-disabled-74",
                                                      "focusVisible": "MuiButtonBase-focusVisible-75",
                                                      "root": "MuiButtonBase-root-73",
                                                    }
                                                  }
                                                  component="button"
                                                  disableRipple={false}
                                                  disableTouchRipple={false}
                                                  disabled={false}
                                                  focusRipple={true}
                                                  focusVisibleClassName="MuiButton-focusVisible-66"
                                                  tabIndex="0"
                                                  type="button"
                                                >
                                                  <button
                                                    className="MuiButtonBase-root-73 MuiButton-root-47 MuiButton-text-49 MuiButton-flat-52"
                                                    disabled={false}
                                                    onBlur={[Function]}
                                                    onFocus={[Function]}
                                                    onKeyDown={[Function]}
                                                    onKeyUp={[Function]}
                                                    onMouseDown={[Function]}
                                                    onMouseLeave={[Function]}
                                                    onMouseUp={[Function]}
                                                    onTouchEnd={[Function]}
                                                    onTouchMove={[Function]}
                                                    onTouchStart={[Function]}
                                                    tabIndex="0"
                                                    type="button"
                                                  >
                                                    <span
                                                      className="MuiButton-label-48"
                                                    >
                                                      Login
                                                    </span>
                                                    <NoSsr
                                                      defer={false}
                                                      fallback={null}
                                                    >
                                                      <WithStyles(TouchRipple)
                                                        center={false}
                                                        innerRef={[Function]}
                                                      >
                                                        <TouchRipple
                                                          center={false}
                                                          classes={
                                                            Object {
                                                              "child": "MuiTouchRipple-child-80",
                                                              "childLeaving": "MuiTouchRipple-childLeaving-81",
                                                              "childPulsate": "MuiTouchRipple-childPulsate-82",
                                                              "ripple": "MuiTouchRipple-ripple-77",
                                                              "ripplePulsate": "MuiTouchRipple-ripplePulsate-79",
                                                              "rippleVisible": "MuiTouchRipple-rippleVisible-78",
                                                              "root": "MuiTouchRipple-root-76",
                                                            }
                                                          }
                                                        >
                                                          <TransitionGroup
                                                            childFactory={[Function]}
                                                            className="MuiTouchRipple-root-76"
                                                            component="span"
                                                            enter={true}
                                                            exit={true}
                                                          >
                                                            <span
                                                              className="MuiTouchRipple-root-76"
                                                            />
                                                          </TransitionGroup>
                                                        </TouchRipple>
                                                      </WithStyles(TouchRipple)>
                                                    </NoSsr>
                                                  </button>
                                                </ButtonBase>
                                              </WithStyles(ButtonBase)>
                                            </Button>
                                          </WithStyles(Button)>
                                        </Button$2>
                                      </a>
                                    </Link>
                                  </ButtonLink>
                                  <ButtonLink
                                    to="/signup"
                                  >
                                    <Link
                                      className="ButtonLink"
                                      replace={false}
                                      to="/signup"
                                    >
                                      <a
                                        className="ButtonLink"
                                        href="/signup"
                                        onClick={[Function]}
                                      >
                                        <Button$2>
                                          <WithStyles(Button)>
                                            <Button
                                              classes={
                                                Object {
                                                  "colorInherit": "MuiButton-colorInherit-68",
                                                  "contained": "MuiButton-contained-58",
                                                  "containedPrimary": "MuiButton-containedPrimary-59",
                                                  "containedSecondary": "MuiButton-containedSecondary-60",
                                                  "disabled": "MuiButton-disabled-67",
                                                  "extendedFab": "MuiButton-extendedFab-65",
                                                  "fab": "MuiButton-fab-64",
                                                  "flat": "MuiButton-flat-52",
                                                  "flatPrimary": "MuiButton-flatPrimary-53",
                                                  "flatSecondary": "MuiButton-flatSecondary-54",
                                                  "focusVisible": "MuiButton-focusVisible-66",
                                                  "fullWidth": "MuiButton-fullWidth-72",
                                                  "label": "MuiButton-label-48",
                                                  "mini": "MuiButton-mini-69",
                                                  "outlined": "MuiButton-outlined-55",
                                                  "outlinedPrimary": "MuiButton-outlinedPrimary-56",
                                                  "outlinedSecondary": "MuiButton-outlinedSecondary-57",
                                                  "raised": "MuiButton-raised-61",
                                                  "raisedPrimary": "MuiButton-raisedPrimary-62",
                                                  "raisedSecondary": "MuiButton-raisedSecondary-63",
                                                  "root": "MuiButton-root-47",
                                                  "sizeLarge": "MuiButton-sizeLarge-71",
                                                  "sizeSmall": "MuiButton-sizeSmall-70",
                                                  "text": "MuiButton-text-49",
                                                  "textPrimary": "MuiButton-textPrimary-50",
                                                  "textSecondary": "MuiButton-textSecondary-51",
                                                }
                                              }
                                              color="default"
                                              component="button"
                                              disableFocusRipple={false}
                                              disabled={false}
                                              fullWidth={false}
                                              mini={false}
                                              size="medium"
                                              type="button"
                                              variant="text"
                                            >
                                              <WithStyles(ButtonBase)
                                                className="MuiButton-root-47 MuiButton-text-49 MuiButton-flat-52"
                                                component="button"
                                                disabled={false}
                                                focusRipple={true}
                                                focusVisibleClassName="MuiButton-focusVisible-66"
                                                type="button"
                                              >
                                                <ButtonBase
                                                  centerRipple={false}
                                                  className="MuiButton-root-47 MuiButton-text-49 MuiButton-flat-52"
                                                  classes={
                                                    Object {
                                                      "disabled": "MuiButtonBase-disabled-74",
                                                      "focusVisible": "MuiButtonBase-focusVisible-75",
                                                      "root": "MuiButtonBase-root-73",
                                                    }
                                                  }
                                                  component="button"
                                                  disableRipple={false}
                                                  disableTouchRipple={false}
                                                  disabled={false}
                                                  focusRipple={true}
                                                  focusVisibleClassName="MuiButton-focusVisible-66"
                                                  tabIndex="0"
                                                  type="button"
                                                >
                                                  <button
                                                    className="MuiButtonBase-root-73 MuiButton-root-47 MuiButton-text-49 MuiButton-flat-52"
                                                    disabled={false}
                                                    onBlur={[Function]}
                                                    onFocus={[Function]}
                                                    onKeyDown={[Function]}
                                                    onKeyUp={[Function]}
                                                    onMouseDown={[Function]}
                                                    onMouseLeave={[Function]}
                                                    onMouseUp={[Function]}
                                                    onTouchEnd={[Function]}
                                                    onTouchMove={[Function]}
                                                    onTouchStart={[Function]}
                                                    tabIndex="0"
                                                    type="button"
                                                  >
                                                    <span
                                                      className="MuiButton-label-48"
                                                    >
                                                      Signup
                                                    </span>
                                                    <NoSsr
                                                      defer={false}
                                                      fallback={null}
                                                    >
                                                      <WithStyles(TouchRipple)
                                                        center={false}
                                                        innerRef={[Function]}
                                                      >
                                                        <TouchRipple
                                                          center={false}
                                                          classes={
                                                            Object {
                                                              "child": "MuiTouchRipple-child-80",
                                                              "childLeaving": "MuiTouchRipple-childLeaving-81",
                                                              "childPulsate": "MuiTouchRipple-childPulsate-82",
                                                              "ripple": "MuiTouchRipple-ripple-77",
                                                              "ripplePulsate": "MuiTouchRipple-ripplePulsate-79",
                                                              "rippleVisible": "MuiTouchRipple-rippleVisible-78",
                                                              "root": "MuiTouchRipple-root-76",
                                                            }
                                                          }
                                                        >
                                                          <TransitionGroup
                                                            childFactory={[Function]}
                                                            className="MuiTouchRipple-root-76"
                                                            component="span"
                                                            enter={true}
                                                            exit={true}
                                                          >
                                                            <span
                                                              className="MuiTouchRipple-root-76"
                                                            />
                                                          </TransitionGroup>
                                                        </TouchRipple>
                                                      </WithStyles(TouchRipple)>
                                                    </NoSsr>
                                                  </button>
                                                </ButtonBase>
                                              </WithStyles(ButtonBase)>
                                            </Button>
                                          </WithStyles(Button)>
                                        </Button$2>
                                      </a>
                                    </Link>
                                  </ButtonLink>
                                  <a
                                    href="https://github.com/davidchristie/social-network"
                                  >
                                    <Avatar$2
                                      image="GitHub.png"
                                    >
                                      <WithStyles(Content)
                                        image="GitHub.png"
                                      >
                                        <Content
                                          classes={
                                            Object {
                                              "large": "Content-large-42",
                                              "small": "Content-small-43",
                                            }
                                          }
                                          image="GitHub.png"
                                        >
                                          <WithStyles(Avatar)
                                            className="Content-small-43"
                                            src="GitHub.png"
                                          >
                                            <Avatar
                                              className="Content-small-43"
                                              classes={
                                                Object {
                                                  "colorDefault": "MuiAvatar-colorDefault-45",
                                                  "img": "MuiAvatar-img-46",
                                                  "root": "MuiAvatar-root-44",
                                                }
                                              }
                                              component="div"
                                              src="GitHub.png"
                                            >
                                              <div
                                                className="MuiAvatar-root-44 Content-small-43"
                                              >
                                                <img
                                                  className="MuiAvatar-img-46"
                                                  src="GitHub.png"
                                                />
                                              </div>
                                            </Avatar>
                                          </WithStyles(Avatar)>
                                        </Content>
                                      </WithStyles(Content)>
                                    </Avatar$2>
                                  </a>
                                </div>
                              </div>
                            </Container>
                          </div>
                        </Toolbar>
                      </WithStyles(Toolbar)>
                    </header>
                  </Paper>
                </WithStyles(Paper)>
              </AppBar>
            </WithStyles(AppBar)>
          </div>
        </Content$4>
      </WithStyles(Content$4)>
    </Topbar>
  </Query>
</Header>
`;

exports[`Header component while loading 1`] = `
<Header>
  <Query
    query={
      Object {
        "definitions": Array [
          Object {
            "directives": Array [],
            "kind": "FragmentDefinition",
            "name": Object {
              "kind": "Name",
              "value": "Image",
            },
            "selectionSet": Object {
              "kind": "SelectionSet",
              "selections": Array [
                Object {
                  "alias": undefined,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "name": Object {
                    "kind": "Name",
                    "value": "id",
                  },
                  "selectionSet": undefined,
                },
                Object {
                  "alias": undefined,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "name": Object {
                    "kind": "Name",
                    "value": "url",
                  },
                  "selectionSet": undefined,
                },
              ],
            },
            "typeCondition": Object {
              "kind": "NamedType",
              "name": Object {
                "kind": "Name",
                "value": "Image",
              },
            },
          },
          Object {
            "directives": Array [],
            "kind": "OperationDefinition",
            "name": Object {
              "kind": "Name",
              "value": "Account",
            },
            "operation": "query",
            "selectionSet": Object {
              "kind": "SelectionSet",
              "selections": Array [
                Object {
                  "alias": undefined,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "name": Object {
                    "kind": "Name",
                    "value": "account",
                  },
                  "selectionSet": Object {
                    "kind": "SelectionSet",
                    "selections": Array [
                      Object {
                        "alias": undefined,
                        "arguments": Array [],
                        "directives": Array [],
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "email",
                        },
                        "selectionSet": undefined,
                      },
                      Object {
                        "alias": undefined,
                        "arguments": Array [],
                        "directives": Array [],
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "id",
                        },
                        "selectionSet": undefined,
                      },
                      Object {
                        "alias": undefined,
                        "arguments": Array [],
                        "directives": Array [],
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "name",
                        },
                        "selectionSet": undefined,
                      },
                      Object {
                        "alias": undefined,
                        "arguments": Array [],
                        "directives": Array [],
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "profile",
                        },
                        "selectionSet": Object {
                          "kind": "SelectionSet",
                          "selections": Array [
                            Object {
                              "alias": undefined,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "avatar",
                              },
                              "selectionSet": Object {
                                "kind": "SelectionSet",
                                "selections": Array [
                                  Object {
                                    "directives": Array [],
                                    "kind": "FragmentSpread",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "Image",
                                    },
                                  },
                                ],
                              },
                            },
                            Object {
                              "alias": undefined,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "followers",
                              },
                              "selectionSet": Object {
                                "kind": "SelectionSet",
                                "selections": Array [
                                  Object {
                                    "alias": undefined,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "avatar",
                                    },
                                    "selectionSet": Object {
                                      "kind": "SelectionSet",
                                      "selections": Array [
                                        Object {
                                          "directives": Array [],
                                          "kind": "FragmentSpread",
                                          "name": Object {
                                            "kind": "Name",
                                            "value": "Image",
                                          },
                                        },
                                      ],
                                    },
                                  },
                                  Object {
                                    "alias": undefined,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "id",
                                    },
                                    "selectionSet": undefined,
                                  },
                                  Object {
                                    "alias": undefined,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "name",
                                    },
                                    "selectionSet": undefined,
                                  },
                                ],
                              },
                            },
                            Object {
                              "alias": undefined,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "following",
                              },
                              "selectionSet": Object {
                                "kind": "SelectionSet",
                                "selections": Array [
                                  Object {
                                    "alias": undefined,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "avatar",
                                    },
                                    "selectionSet": Object {
                                      "kind": "SelectionSet",
                                      "selections": Array [
                                        Object {
                                          "directives": Array [],
                                          "kind": "FragmentSpread",
                                          "name": Object {
                                            "kind": "Name",
                                            "value": "Image",
                                          },
                                        },
                                      ],
                                    },
                                  },
                                  Object {
                                    "alias": undefined,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "id",
                                    },
                                    "selectionSet": undefined,
                                  },
                                  Object {
                                    "alias": undefined,
                                    "arguments": Array [],
                                    "directives": Array [],
                                    "kind": "Field",
                                    "name": Object {
                                      "kind": "Name",
                                      "value": "name",
                                    },
                                    "selectionSet": undefined,
                                  },
                                ],
                              },
                            },
                            Object {
                              "alias": undefined,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "id",
                              },
                              "selectionSet": undefined,
                            },
                            Object {
                              "alias": undefined,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "name",
                              },
                              "selectionSet": undefined,
                            },
                          ],
                        },
                      },
                    ],
                  },
                },
              ],
            },
            "variableDefinitions": Array [],
          },
        ],
        "kind": "Document",
        "loc": Object {
          "end": 440,
          "start": 0,
        },
      }
    }
  >
    <Topbar
      className="Header"
    >
      <WithStyles(Content$4)
        className="Header"
      >
        <Content$4
          className="Header"
          classes={
            Object {
              "topbar": "Content-4-topbar-1",
            }
          }
        >
          <div
            className="Content-4-topbar-1 Header"
          >
            <WithStyles(AppBar)
              color="default"
              position="static"
            >
              <AppBar
                classes={
                  Object {
                    "colorDefault": "MuiAppBar-colorDefault-8",
                    "colorPrimary": "MuiAppBar-colorPrimary-9",
                    "colorSecondary": "MuiAppBar-colorSecondary-10",
                    "positionAbsolute": "MuiAppBar-positionAbsolute-4",
                    "positionFixed": "MuiAppBar-positionFixed-3",
                    "positionRelative": "MuiAppBar-positionRelative-7",
                    "positionStatic": "MuiAppBar-positionStatic-6",
                    "positionSticky": "MuiAppBar-positionSticky-5",
                    "root": "MuiAppBar-root-2",
                  }
                }
                color="default"
                position="static"
              >
                <WithStyles(Paper)
                  className="MuiAppBar-root-2 MuiAppBar-positionStatic-6 MuiAppBar-colorDefault-8"
                  component="header"
                  elevation={4}
                  square={true}
                >
                  <Paper
                    className="MuiAppBar-root-2 MuiAppBar-positionStatic-6 MuiAppBar-colorDefault-8"
                    classes={
                      Object {
                        "elevation0": "MuiPaper-elevation0-13",
                        "elevation1": "MuiPaper-elevation1-14",
                        "elevation10": "MuiPaper-elevation10-23",
                        "elevation11": "MuiPaper-elevation11-24",
                        "elevation12": "MuiPaper-elevation12-25",
                        "elevation13": "MuiPaper-elevation13-26",
                        "elevation14": "MuiPaper-elevation14-27",
                        "elevation15": "MuiPaper-elevation15-28",
                        "elevation16": "MuiPaper-elevation16-29",
                        "elevation17": "MuiPaper-elevation17-30",
                        "elevation18": "MuiPaper-elevation18-31",
                        "elevation19": "MuiPaper-elevation19-32",
                        "elevation2": "MuiPaper-elevation2-15",
                        "elevation20": "MuiPaper-elevation20-33",
                        "elevation21": "MuiPaper-elevation21-34",
                        "elevation22": "MuiPaper-elevation22-35",
                        "elevation23": "MuiPaper-elevation23-36",
                        "elevation24": "MuiPaper-elevation24-37",
                        "elevation3": "MuiPaper-elevation3-16",
                        "elevation4": "MuiPaper-elevation4-17",
                        "elevation5": "MuiPaper-elevation5-18",
                        "elevation6": "MuiPaper-elevation6-19",
                        "elevation7": "MuiPaper-elevation7-20",
                        "elevation8": "MuiPaper-elevation8-21",
                        "elevation9": "MuiPaper-elevation9-22",
                        "root": "MuiPaper-root-11",
                        "rounded": "MuiPaper-rounded-12",
                      }
                    }
                    component="header"
                    elevation={4}
                    square={true}
                  >
                    <header
                      className="MuiPaper-root-11 MuiPaper-elevation4-17 MuiAppBar-root-2 MuiAppBar-positionStatic-6 MuiAppBar-colorDefault-8"
                    >
                      <WithStyles(Toolbar)>
                        <Toolbar
                          classes={
                            Object {
                              "dense": "MuiToolbar-dense-41",
                              "gutters": "MuiToolbar-gutters-39",
                              "regular": "MuiToolbar-regular-40",
                              "root": "MuiToolbar-root-38",
                            }
                          }
                          disableGutters={false}
                          variant="regular"
                        >
                          <div
                            className="MuiToolbar-root-38 MuiToolbar-regular-40 MuiToolbar-gutters-39"
                          >
                            <Container>
                              <div
                                className="Container"
                              >
                                <Link
                                  className="logo"
                                  replace={false}
                                  to="/"
                                >
                                  <a
                                    className="logo"
                                    href="/"
                                    onClick={[Function]}
                                  >
                                    Social Network
                                  </a>
                                </Link>
                                <div
                                  className="items"
                                >
                                  <a
                                    href="https://github.com/davidchristie/social-network"
                                  >
                                    <Avatar$2
                                      image="GitHub.png"
                                    >
                                      <WithStyles(Content)
                                        image="GitHub.png"
                                      >
                                        <Content
                                          classes={
                                            Object {
                                              "large": "Content-large-42",
                                              "small": "Content-small-43",
                                            }
                                          }
                                          image="GitHub.png"
                                        >
                                          <WithStyles(Avatar)
                                            className="Content-small-43"
                                            src="GitHub.png"
                                          >
                                            <Avatar
                                              className="Content-small-43"
                                              classes={
                                                Object {
                                                  "colorDefault": "MuiAvatar-colorDefault-45",
                                                  "img": "MuiAvatar-img-46",
                                                  "root": "MuiAvatar-root-44",
                                                }
                                              }
                                              component="div"
                                              src="GitHub.png"
                                            >
                                              <div
                                                className="MuiAvatar-root-44 Content-small-43"
                                              >
                                                <img
                                                  className="MuiAvatar-img-46"
                                                  src="GitHub.png"
                                                />
                                              </div>
                                            </Avatar>
                                          </WithStyles(Avatar)>
                                        </Content>
                                      </WithStyles(Content)>
                                    </Avatar$2>
                                  </a>
                                </div>
                              </div>
                            </Container>
                          </div>
                        </Toolbar>
                      </WithStyles(Toolbar)>
                    </header>
                  </Paper>
                </WithStyles(Paper)>
              </AppBar>
            </WithStyles(AppBar)>
          </div>
        </Content$4>
      </WithStyles(Content$4)>
    </Topbar>
  </Query>
</Header>
`;
